--- a/TownSquareAuth/TownSquareAuth.csproj
+++ b/TownSquareAuth/TownSquareAuth.csproj
@@ -12,9 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <!-- <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.8" /> -->
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -27,5 +29,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
   </ItemGroup>
+
+  <!-- <ItemGroup>
+    <ProjectReference Include="TownSquareAuth.csproj" />
+  </ItemGroup> -->
 
 </Project>
